feat: add class in other id

--- a/index.html
+++ b/index.html
@@ -8,5 +8,23 @@
     <title>SUMMARY</title>
 </head>
 <body>
+    <header>
+        <div id="name" class="about">
+            <h1>Viktoryia Soroka</h1>
+            <p>Junior developer</p>
+        </div>
+        <div id="person" class="abot"></div>
+        <div id="contact" class="about"></div>
+    </header>
+    <main>
+        <div class="about">
+            <h2>Professional profile</h2>
+            <h2>Technical skills</h2>
+            <h2>Personal qualities:</h2>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; Copyright 2019 by VS</p>
+    </footer>
 </body>
 </html>
