fix: change link person foto

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <main class="main">
             <div class="left-side">
                 <div id="person">
-                    <img src="assets/images/Person.JPG" alt="photo" class="person-foto">
+                    <img src="assets/images/person.jpg" alt="photo" class="person-foto">
                 </div>
                 <div id="contact">
                     <ul class="contact-list">
