--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Summary</title>
-    <link type="image/x-icon" rel="shortcut icon" href="/assets/favicon/favicon.ico">
-    <link type="image/png" sizes="16x16" rel="icon" href="/assets/favicon/favicon-16x16.png">
-    <link type="image/png" sizes="32x32" rel="icon" href="/assets/favicon/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="assets/vendor/normalize.css">
     <link rel="stylesheet" href="assets/style.css">
 </head>
-
 <body>
     <div class="wrapper">
         <header class="header">
@@ -46,15 +41,12 @@
                 <div id="contact">
                     <ul class="contact-list">
                         <li class="contact-item"><a class="link"
-                                href="https://www.google.com/maps/d/viewer?ie=UTF8&oe=UTF8&msa=0&mid=1YQFsL4xLz3WsXdUK_gaKZWtmJGA&ll=49.841920000000016%2C24.031799&z=17"><span
-                                    class="icon map-icon"></span>Ukraine, Lviv</a></li>
-                        <li class="contact-item"><a class="link" href="tel:+380631840970"><span
-                                    class="icon tel-icon"></span>+380-63-184-09-70</a></li>
+                            href="https://www.google.com/maps/d/viewer?ie=UTF8&oe=UTF8&msa=0&mid=1YQFsL4xLz3WsXdUK_gaKZWtmJGA&ll=49.841920000000016%2C24.031799&z=17"><span class="icon map-icon"></span>Ukraine, Lviv</a></li>   
+                        <li class="contact-item"><a class="link" href="tel:+380631840970"><span class="icon tel-icon"></span>+380-63-184-09-70</a></li>
                         <li class="contact-item"><a class="link" href="mailto:v.soroka@live.com"><span
-                                    class="icon mail-icon"></span>v.soroka@live.com</a></li>
-                        <li class="contact-item"><a class="link" href="https://discord.gg/zkFfDPGw"><span
-                                    class="icon discord-icon"></span>Discord</a></li>
-                    </ul>
+                            class="icon mail-icon"></span>v.soroka@live.com</a></li>
+                        <li class="contact-item"><a class="link" href="https://discord.gg/zkFfDPGw"><span class="icon discord-icon"></span>Discord</a></li>
+                    </ul> 
                 </div>
             </div>
             <div class="right-side">
@@ -64,7 +56,7 @@
                     <h2>Professional profile</h2>
                     <p>Novice frontend-developer.<br>Confident knowledge of HTML, CSS, JavaScript. <br>English:
                         Pre-Intermediate
-                        (B1).</p>
+                        (A2).</p>
                     <h2>Personal qualities</h2>
                     <ol>
                         <li>work closely with other developers and professionals;</li>
@@ -96,8 +88,7 @@
                     <h2>Technical skills</h2>
                     <ul>
                         <li>OS: Windows, macOS.</li>
-                        <li>Languages: Javascript.</li>
-                        <li>HTML, CSS.</li>
+                        <li>Languages: Javascript, HTML, CSS.</li>
                     </ul>
                 </div>
                 <div id="code-example">
@@ -112,28 +103,9 @@
                 </div>
                 <div id="projects">
                     <h2>Projects</h2>
-                    <div class="projects">
-                        <a href="https://viktoryiasoroka.github.io/rsschool-cv/cv" target="_blank" class="project_link">
-                            <img src="assets/images/JavaScript.png" alt="JavaScript" class="projects__icon">
-                        </a>
-                        <a href="https://rolling-scopes-school.github.io/viktoryiasoroka-JSFEPRESCHOOL/portfolio"
-                            target="_blank" class="project_link">
-                            <img src="/assets/images/portfolio.png" alt="project_portfolio" class="projects__icon">
-                        </a>
-                        <a href="https://rolling-scopes-school.github.io/viktoryiasoroka-JSFEPRESCHOOL/eco-sounds"
-                            target="_blank" class="project_link">
-                            <img src="/assets/images/birds.png" alt="eco_sounds" class="projects__icon">
-                        </a>
-                        <a href="https://rolling-scopes-school.github.io/viktoryiasoroka-JSFEPRESCHOOL/random-jokes"
-                            target="_blank" class="project_link">
-                            <img src="/assets/images/quote.png" alt="random-quotes" class="projects__icon">
-                        </a>
-                        <a href="https://rolling-scopes-school.github.io/viktoryiasoroka-JSFEPRESCHOOL/tic-tac-toe"
-                            target="_blank" class="project_link">
-                            <img src="/assets/images/soon.png" alt="tic-tac-toe" class="projects__icon">
-                        </a>
-                    </div>
-
+                    <a href="https://viktoryiasoroka.github.io/rsschool-cv/cv" target="_blank">
+                        <img src="assets/images/JavaScript.png" alt="JavaScript" class="projects__icon">
+                      </a>
                 </div>
             </div>
         </main>
@@ -154,5 +126,4 @@
         </footer>
     </div>
 </body>
-
 </html>
