fix: change links for images

--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
                         </a>
                         <a href="https://rolling-scopes-school.github.io/viktoryiasoroka-JSFEPRESCHOOL/portfolio"
                             target="_blank" class="project_link">
-                            <img src="/assets/images/portfolio.png" alt="project_portfolio" class="projects__icon">
+                            <img src="assets/images/portfolio.png" alt="project_portfolio" class="projects__icon">
                         </a>
                         <a href="https://rolling-scopes-school.github.io/viktoryiasoroka-JSFEPRESCHOOL/eco-sounds"
                             target="_blank" class="project_link">
-                            <img src="/assets/images/birds.png" alt="eco_sounds" class="projects__icon">
+                            <img src="assets/images/birds.png" alt="eco_sounds" class="projects__icon">
                         </a>
                         <a href="https://rolling-scopes-school.github.io/viktoryiasoroka-JSFEPRESCHOOL/random-jokes"
                             target="_blank" class="project_link">
-                            <img src="/assets/images/quote.png" alt="random-quotes" class="projects__icon">
+                            <img src="assets/images/quote.png" alt="random-quotes" class="projects__icon">
                         </a>
                         <a href="https://rolling-scopes-school.github.io/viktoryiasoroka-JSFEPRESCHOOL/tic-tac-toe"
                             target="_blank" class="project_link">
-                            <img src="/assets/images/tic.png" alt="tic-tac-toe" class="projects__icon">
+                            <img src="assets/images/tic.png" alt="tic-tac-toe" class="projects__icon">
                         </a>
                     </div>
 
