--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Summary</title>
-    <link type="image/x-icon" rel="shortcut icon" href="/assets/favicon/favicon.ico">
-    <link type="image/png" sizes="16x16" rel="icon" href="/assets/favicon/favicon-16x16.png">
-    <link type="image/png" sizes="32x32" rel="icon" href="/assets/favicon/favicon-32x32.png">
+    <link type="image/x-icon" rel="shortcut icon" href="assets/favicon/favicon.ico">
+    <link type="image/png" sizes="16x16" rel="icon" href="assets/favicon/favicon-16x16.png">
+    <link type="image/png" sizes="32x32" rel="icon" href="assets/favicon/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="assets/vendor/normalize.css">
     <link rel="stylesheet" href="assets/style.css">
